Fix IE9 layout issue

--- a/webapps/eea_search/public/css/style.css
+++ b/webapps/eea_search/public/css/style.css
@@ -14,7 +14,7 @@
 }
 
 .content .page-header {
-    background-color: #fff;
+    background-color: transparent;
     display: inline;
     border-bottom-color: #fff;
 }
